--- a/text-scramble/demo/index.html
+++ b/text-scramble/demo/index.html
@@ -62,7 +62,7 @@
           color: #757575;
         }
                 </style>
-        <script type="module" src="https://unpkg.com/co-depends@0.0.1/text-scramble/text-scramble.js?module"></script>
+        <script type="module" src="https://cdn.jsdelivr.net/npm/co-depends@0.0.3/text-scramble/dist/text-scramble.iife.min.js?module"></script>
     </div>
 </body>
 
