--- a/parallax-flip-card/demo/dev.html
+++ b/parallax-flip-card/demo/dev.html
@@ -5,10 +5,11 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Document</title>
-
 </head>
 <body>
-    <iframe src="../css-minesweeper.html"></iframe>
-    <co-depends-css-minesweeper></co-depends-css-minesweeper>
+    <div>
+        <co-depends-parallax-flip-card></co-depends-parallax-flip-card>
+        <script type="module" src="../parallax-flip-card.js"></script>
+    </div>
 </body>
 </html>
