--- a/parallax-flip-card/demo/dev.html
+++ b/parallax-flip-card/demo/dev.html
@@ -8,8 +8,21 @@
 </head>
 <body>
     <div>
-        <co-depends-parallax-flip-card></co-depends-parallax-flip-card>
+        <co-depends-parallax-flip-card id="first">
+            <div slot="front">
+                <p>Diligord</p>
+                <span>Lorem ipsum</span>
+            </div>
+            <div slot="back">
+                    <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Alias cum repellat velit quae suscipit c.</p>
+            </div>
+        </co-depends-parallax-flip-card>
         <script type="module" src="../parallax-flip-card.js"></script>
+        <style>
+            #first{
+                --front-background-image: url(https://unsplash.it/500/500/);
+            }
+        </style>
     </div>
 </body>
 </html>
