--- a/nested-dropdown/demo/dev.html
+++ b/nested-dropdown/demo/dev.html
@@ -12,9 +12,9 @@
     <div>
         <!-- <litter-g></litter-g> -->
         <co-depends-nested-dropdown>
-            <ul id='nav' data-role="menu">
+            <ul id='nav' data-role="menu" data-control-id="link-top" data-label-id="menu" data-label-text="Menu">
                 <li>Shop
-                    <ul>
+                    <ul id="nest" data-role="menu" data-control-id="link-shop" data-label-id="shop" data-label-text="Shop">
                         <li>Tops</li>
                     </ul>
                 </li>
