--- a/nested-dropdown/demo/dev.html
+++ b/nested-dropdown/demo/dev.html
@@ -13,9 +13,12 @@
         <!-- <litter-g></litter-g> -->
         <co-depends-nested-dropdown>
             <ul id='nav' data-role="menu" data-control-id="link-top" data-label-id="menu" data-label-text="Menu">
-                <li>Shop
+                <li>
                     <ul id="nest" data-role="menu" data-control-id="link-shop" data-label-id="shop" data-label-text="Shop">
                         <li>Tops</li>
+                        <li>Bottoms</li>
+                        <li>Shoes</li>
+                        <li>Accessories</li>
                     </ul>
                 </li>
             </ul>
@@ -25,7 +28,7 @@
         </co-depends-nested-dropdown>
         <script type="module" src="../nested-dropdown.js"></script>
         <script type="module" src="https://cdn.jsdelivr.net/npm/litter-g@0.0.17/dist/litter-g.iife.js"></script>
-        <script type="module" src="https://cdn.jsdelivr.net/npm/h2o-lilies@0.0.3/dist/h2o-lilies.iife.js"></script> 
+        <script type="module" src="https://cdn.jsdelivr.net/npm/h2o-lilies@0.0.6/dist/h2o-lilies.iife.js"></script> 
         <script type="module" src="https://cdn.jsdelivr.net/npm/p-d.p-u@0.0.92/dist/p-all.iife.js"></script>
     </div>
 </body>
