--- a/nested-dropdown/demo/dev.html
+++ b/nested-dropdown/demo/dev.html
@@ -15,10 +15,10 @@
             <ul id='nav' data-role="menu" data-control-id="link-top" data-label-id="menu" data-label-text="Menu">
                 <li>
                     <ul id="nest" data-role="menu" data-control-id="link-shop" data-label-id="shop" data-label-text="Shop">
-                        <li>Tops</li>
-                        <li>Bottoms</li>
-                        <li>Shoes</li>
-                        <li>Accessories</li>
+                        <li><a role='menuitem' tabindex='3'>Tops        </a></li>
+                        <li><a role='menuitem' tabindex='3'>Bottoms     </a></li>
+                        <li><a role='menuitem' tabindex='3'>Shoes       </a></li>
+                        <li><a role='menuitem' tabindex='3'>Accessories </a></li>
                     </ul>
                 </li>
             </ul>
