--- a/nested-dropdown/demo/dev.html
+++ b/nested-dropdown/demo/dev.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="en" style="height:100%">
 
 <head>
     <meta charset="UTF-8">
@@ -8,10 +8,10 @@
     <title>Document</title>
 </head>
 
-<body>
-    <div>
+<body style="height:100%">
+    <div style="height:100%">
         <!-- <litter-g></litter-g> -->
-        <co-depends-nested-dropdown>
+        <co-depends-nested-dropdown style="height:100%">
             <ul id='nav' data-role="menu" data-control-id="link-top" data-label-id="menu" data-label-text="Menu">
                 <li>
                     <ul id="nest" data-role="menu" data-control-id="link-shop" data-label-id="shop" data-label-text="Shop">
