--- a/nested-dropdown/demo/dev.html
+++ b/nested-dropdown/demo/dev.html
@@ -15,27 +15,36 @@
             <ul id='nav' data-role="menu" data-control-id="link-top" data-label-id="menu" data-label-text="Menu">
                 <li>
                     <ul id="nest" data-role="menu" data-control-id="link-shop" data-label-id="shop" data-label-text="Shop">
-                        <li><a role='menuitem' tabindex='3'>Tops        </a></li>
-                        <li><a role='menuitem' tabindex='3'>Bottoms     </a></li>
-                        <li><a role='menuitem' tabindex='3'>Shoes       </a></li>
+                        <li><a role='menuitem' tabindex='3'>Tops </a></li>
+                        <li><a role='menuitem' tabindex='3'>Bottoms </a></li>
+                        <li><a role='menuitem' tabindex='3'>Shoes </a></li>
                         <li><a role='menuitem' tabindex='3'>Accessories </a></li>
                     </ul>
                 </li>
+                <li>
+                    <a role='menuitem' tabindex='4'>Blog</a>
+                </li>
+                <li>
+                    <a role='menuitem' tabindex='4'>About</a>
+                </li>
+                <li>
+                    <a role='menuitem' tabindex='4'>Contact</a>
+                </li>
             </ul>
             <h2o-lilies slot="generator" disabled></h2o-lilies>
-            
+
 
         </co-depends-nested-dropdown>
         <script type="module" src="../nested-dropdown.js"></script>
         <script type="module" src="https://cdn.jsdelivr.net/npm/litter-g@0.0.17/dist/litter-g.iife.js"></script>
-        <script type="module" src="https://cdn.jsdelivr.net/npm/h2o-lilies@0.0.6/dist/h2o-lilies.iife.js"></script> 
+        <script type="module" src="https://cdn.jsdelivr.net/npm/h2o-lilies@0.0.6/dist/h2o-lilies.iife.js"></script>
         <script type="module" src="https://cdn.jsdelivr.net/npm/p-d.p-u@0.0.92/dist/p-all.iife.js"></script>
     </div>
 </body>
 
 </html>
 
-            <!-- <input aria-controls='nav' aria-haspopup='true' aria-labelledby='menu' id='link-top' role='button' tabindex='1'
+<!-- <input aria-controls='nav' aria-haspopup='true' aria-labelledby='menu' id='link-top' role='button' tabindex='1'
                 type='checkbox'>
             <label class='down' for='link-top' id='menu' role='none' tabindex='-1'>Menu</label>
             <ul aria-labelledby='menu' id='nav' role='menu'>
