--- a/nested-dropdown/demo/index.html
+++ b/nested-dropdown/demo/index.html
@@ -35,7 +35,7 @@
 
 
         </co-depends-nested-dropdown>
-        <script type="module" src="https://cdn.jsdelivr.net/npm/co-depends/nested-dropdown/dist/nested-dropdown.iife.js"></script>
+        <script type="module" src="https://cdn.jsdelivr.net/npm/co-depends@0.0.12/nested-dropdown/dist/nested-dropdown.iife.js"></script>
         <script type="module" src="https://cdn.jsdelivr.net/npm/h2o-lilies@0.0.6/dist/h2o-lilies.iife.js"></script>
     </div>
 </body>
