--- a/nested-dropdown/demo/dev.html
+++ b/nested-dropdown/demo/dev.html
@@ -12,9 +12,9 @@
     <div style="height:100%">
         <!-- <litter-g></litter-g> -->
         <co-depends-nested-dropdown style="height:100%">
-            <ul id='nav' data-role="menu" data-control-id="link-top" data-label-id="menu" data-label-text="Menu">
+            <ul id='nav' data-role="menu" data-label-id="menu" data-label-text="Menu">
                 <li>
-                    <ul id="nest" data-role="menu" data-control-id="link-shop" data-label-id="shop" data-label-text="Shop">
+                    <ul id="nest" data-role="menu" data-label-id="shop" data-label-text="Shop">
                         <li><a role='menuitem' tabindex='3'>Tops </a></li>
                         <li><a role='menuitem' tabindex='3'>Bottoms </a></li>
                         <li><a role='menuitem' tabindex='3'>Shoes </a></li>
