--- a/nested-dropdown/demo/dev.html
+++ b/nested-dropdown/demo/dev.html
@@ -12,23 +12,23 @@
     <div style="height:100%">
         <!-- <litter-g></litter-g> -->
         <co-depends-nested-dropdown style="height:100%">
-            <ul id='nav' data-role="menu" data-label-id="menu" data-label-text="Menu">
+            <ul id='nav' data-label-text="Menu">
                 <li>
-                    <ul id="nest" data-role="menu" data-label-id="shop" data-label-text="Shop">
-                        <li><a role='menuitem' tabindex='3'>Tops </a></li>
-                        <li><a role='menuitem' tabindex='3'>Bottoms </a></li>
-                        <li><a role='menuitem' tabindex='3'>Shoes </a></li>
-                        <li><a role='menuitem' tabindex='3'>Accessories </a></li>
+                    <ul id="nest"  data-label-text="Shop">
+                        <li><a tabindex='3'>Tops </a></li>
+                        <li><a tabindex='3'>Bottoms </a></li>
+                        <li><a tabindex='3'>Shoes </a></li>
+                        <li><a tabindex='3'>Accessories </a></li>
                     </ul>
                 </li>
                 <li>
-                    <a role='menuitem' tabindex='4'>Blog</a>
+                    <a tabindex='4'>Blog</a>
                 </li>
                 <li>
-                    <a role='menuitem' tabindex='4'>About</a>
+                    <a tabindex='4'>About</a>
                 </li>
                 <li>
-                    <a role='menuitem' tabindex='4'>Contact</a>
+                    <a tabindex='4'>Contact</a>
                 </li>
             </ul>
             <h2o-lilies slot="generator" disabled></h2o-lilies>
