--- a/nested-dropdown/demo/index.html
+++ b/nested-dropdown/demo/index.html
@@ -10,25 +10,24 @@
 
 <body style="height:100%">
     <div style="height:100%">
-        <!-- <litter-g></litter-g> -->
         <co-depends-nested-dropdown style="height:100%">
             <ul id='nav' data-role="menu" data-control-id="link-top" data-label-id="menu" data-label-text="Menu">
                 <li>
                     <ul id="nest" data-role="menu" data-control-id="link-shop" data-label-id="shop" data-label-text="Shop">
-                        <li><a role='menuitem' tabindex='3'>Tops </a></li>
-                        <li><a role='menuitem' tabindex='3'>Bottoms </a></li>
-                        <li><a role='menuitem' tabindex='3'>Shoes </a></li>
-                        <li><a role='menuitem' tabindex='3'>Accessories </a></li>
+                        <li><a tabindex='3'>Tops </a></li>
+                        <li><a tabindex='3'>Bottoms </a></li>
+                        <li><a tabindex='3'>Shoes </a></li>
+                        <li><a tabindex='3'>Accessories </a></li>
                     </ul>
                 </li>
                 <li>
-                    <a role='menuitem' tabindex='4'>Blog</a>
+                    <a tabindex='4'>Blog</a>
                 </li>
                 <li>
-                    <a role='menuitem' tabindex='4'>About</a>
+                    <a tabindex='4'>About</a>
                 </li>
                 <li>
-                    <a role='menuitem' tabindex='4'>Contact</a>
+                    <a tabindex='4'>Contact</a>
                 </li>
             </ul>
             <h2o-lilies slot="generator" disabled></h2o-lilies>
@@ -36,7 +35,7 @@
 
         </co-depends-nested-dropdown>
         <script type="module" src="https://cdn.jsdelivr.net/npm/co-depends@0.0.12/nested-dropdown/dist/nested-dropdown.iife.js"></script>
-        <script type="module" src="https://cdn.jsdelivr.net/npm/h2o-lilies@0.0.6/dist/h2o-lilies.iife.js"></script>
+        <script type="module" src="https://cdn.jsdelivr.net/npm/h2o-lilies@0.0.8/dist/h2o-lilies.iife.js"></script>
     </div>
 </body>
 
