--- a/nested-dropdown/demo/dev.html
+++ b/nested-dropdown/demo/dev.html
@@ -10,30 +10,44 @@
 
 <body style="height:100%">
     <div style="height:100%">
-        <!-- <litter-g></litter-g> -->
+        
         <co-depends-nested-dropdown style="height:100%">
-            <ul id='nav' data-label-text="Menu">
-                <li>
-                    <ul id="nest"  data-label-text="Shop">
-                        <li><a tabindex='3'>Tops </a></li>
-                        <li><a tabindex='3'>Bottoms </a></li>
-                        <li><a tabindex='3'>Shoes </a></li>
-                        <li><a tabindex='3'>Accessories </a></li>
+            <template slot="template">
+                <input aria-controls='nav' aria-haspopup='true' aria-labelledby='menu' id='link-top' role='button' tabindex='1' type='checkbox'>
+                <label class='down' for='link-top' id='menu' role='none' tabindex='-1'>Menu</label>
+                <ul aria-labelledby='menu' id='nav' role='menu'>
+                  <li role='none'>
+                    <input aria-controls='nest' aria-haspopup='true' aria-labelledby='shop' id='link-shop' role='menuitem' tabindex='2' type='checkbox'>
+                    <label class='right' for='link-shop' id='shop' role='none' tabindex='-1'>Shop</label>
+                    <ul aria-labelledby='shop' id='nest' role='menu'>
+                      <li role='none'>
+                        <a role='menuitem' tabindex='3'>Tops</a>
+                      </li>
+                      <li role='none'>
+                        <a role='menuitem' tabindex='3'>Bottoms</a>
+                      </li>
+                      <li role='none'>
+                        <a role='menuitem' tabindex='3'>Shoes</a>
+                      </li>
+                      <li role='none'>
+                        <a role='menuitem' tabindex='3'>Accessories</a>
+                      </li>
+                      <li role='none'>
+                        <a role='menuitem' tabindex='3'>Sale</a>
+                      </li>
                     </ul>
-                </li>
-                <li>
-                    <a tabindex='4'>Blog</a>
-                </li>
-                <li>
-                    <a tabindex='4'>About</a>
-                </li>
-                <li>
-                    <a tabindex='4'>Contact</a>
-                </li>
-            </ul>
-            <h2o-lilies slot="generator" disabled></h2o-lilies>
-
-
+                  </li>
+                  <li role='none'>
+                    <a role='menuitem' tabindex='4'>Blog</a>
+                  </li>
+                  <li role='none'>
+                    <a role='menuitem' tabindex='4'>About</a>
+                  </li>
+                  <li role='none'>
+                    <a role='menuitem' tabindex='4'>Contact</a>
+                  </li>
+                </ul>
+            </template>
         </co-depends-nested-dropdown>
         <script type="module" src="../nested-dropdown.js"></script>
         <script type="module" src="https://cdn.jsdelivr.net/npm/litter-g@0.0.17/dist/litter-g.iife.js"></script>
