--- a/responsive-honeycomb/root.html
+++ b/responsive-honeycomb/root.html
@@ -177,8 +177,8 @@
         <slot name="template"></slot>
         <div class="body" id="content"></div>
         <be-hive></be-hive>
-        <script id=shared-xtal-fig-diamond nomodule be-having>
-            export const make=['xtal-fig/diamond/make.js', 'https://esm.run/xtal-fig@0.0.24/diamond/make.js'];
+        <script id=shared-co-depends-response-honeycomb nomodule be-having>
+            export const make=['co-depends/response-honeycomb/make.js', 'https://esm.run/co-depends@0.0.24/response-honeycomb/make.js'];
             export const definitive = {
                 impl: ['be-definitive/be-definitive.js', 'https://esm.run/be-definitive@0.0.88']
             }
