--- a/responsive-honeycomb/root.html
+++ b/responsive-honeycomb/root.html
@@ -174,14 +174,17 @@
                 }
             }
         </style>
-        <slot name="template"></slot>
+        <slot></slot>
         <div class="body" id="content"></div>
         <be-hive></be-hive>
         <script id=shared-co-depends-response-honeycomb nomodule be-having>
-            export const make=['co-depends/response-honeycomb/make.js', 'https://esm.run/co-depends@0.0.24/response-honeycomb/make.js'];
+            export const make=['co-depends/responsive-honeycomb/make.js', 'https://esm.run/co-depends@0.0.24/response-honeycomb/make.js'];
+            export const ferried = {
+                impl: ['be-ferried/be-ferried.js', 'https://esm.run/be-ferried@0.0.43']
+            };
             export const definitive = {
                 impl: ['be-definitive/be-definitive.js', 'https://esm.run/be-definitive@0.0.88']
-            }
+            };
         </script>
     <!--end--><!--end--></template>
 </responsive-honeycomb>
