--- a/responsive-honeycomb/root.html
+++ b/responsive-honeycomb/root.html
@@ -173,6 +173,9 @@
                     display: block;
                 }
             }
+            slot.ferry-complete{
+                display:none;
+            }
         </style>
         <slot></slot>
         <div class="body" id="content"></div>
