--- a/responsive-honeycomb/demo/dev2.html
+++ b/responsive-honeycomb/demo/dev2.html
@@ -27,7 +27,7 @@
                 "be-decorated/": "../../node_modules/be-decorated/",
                 "be-definitive/": "../../node_modules/be-definitive/",
                 "be-exportable/": "../../node_modules/be-exportable/",
-                "be-ferried/": "../../be-ferried/",
+                "be-ferried/": "../../node_modules/be-ferried/",
                 "be-having/": "../../node_modules/be-having/",
                 "be-hive/": "../../node_modules/be-hive/",
                 "be-importing/": "../../node_modules/be-importing/",
