--- a/responsive-honeycomb/demo/dev.html
+++ b/responsive-honeycomb/demo/dev.html
@@ -1,50 +1,46 @@
 <!DOCTYPE html>
 <html lang="en">
-
 <head>
     <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>Honeycomb test</title>
-    <iframe style="display:none" src="../responsive-honeycomb.html"></iframe>
+    <title>Document</title>
 </head>
-
 <body>
-    <co-depends-responsive-honeycomb>
-        <template slot="template">
-            <ul class="honeycomb" lang="es">
-                <li class="honeycomb-cell">
-                    <img class="honeycomb-cell__image" src="https://source.unsplash.com/random/1">
-                    <div class="honeycomb-cell__title">Diseño exclusivo</div>
-                </li>
-                <li class="honeycomb-cell">
-                    <img class="honeycomb-cell__image" src="https://source.unsplash.com/random/2">
-                    <div class="honeycomb-cell__title">Impermeables</div>
-                </li>
-                <li class="honeycomb-cell">
-                    <img class="honeycomb-cell__image" src="https://source.unsplash.com/random/3">
-                    <div class="honeycomb-cell__title">Tablero doble cara</div>
-                </li>
-                <li class="honeycomb-cell">
-                    <img class="honeycomb-cell__image" src="https://source.unsplash.com/random/4">
-                    <div class="honeycomb-cell__title">Maletín de empaque</div>
-                </li>
-                <li class="honeycomb-cell">
-                    <img class="honeycomb-cell__image" src="https://source.unsplash.com/random/5">
-                    <div class="honeycomb-cell__title">Antireflectivo<small>No vidrio</small></div>
-                </li>
-                <li class="honeycomb-cell">
-                    <img class="honeycomb-cell__image" src="https://source.unsplash.com/random/6">
-                    <div class="honeycomb-cell__title">6 fichas<small>1 de repuesto</small></div>
-                </li>
-                <li class="honeycomb-cell">
-                    <img class="honeycomb-cell__image" src="https://source.unsplash.com/random/7">
-                    <div class="honeycomb-cell__title">Tablero magnético</div>
-                </li>
-                <li class="honeycomb-cell honeycomb__placeholder"></li>
-            </ul>
-        </template>
+    <co-depends-responsive-honeycomb be-importing=co-depends/responsive-honeycomb/root.html/>
+        <div>
+            <img class="honeycomb-cell__image" src="https://source.unsplash.com/random/1" alt="Diseño exclusivo">
+            <img class="honeycomb-cell__image" src="https://source.unsplash.com/random/2" alt="Impermeables">
+            <img class="honeycomb-cell__image" src="https://source.unsplash.com/random/3" alt="Tablero doble cara">
+            <img class="honeycomb-cell__image" src="https://source.unsplash.com/random/4" alt="Maletín de empaque">
+            <img class="honeycomb-cell__image" src="https://source.unsplash.com/random/5" alt="Antireflectivo" data-small="No vidrio">
+            <img class="honeycomb-cell__image" src="https://source.unsplash.com/random/6" alt="6 fichas" data-small="1 de repuesto">
+            <img class="honeycomb-cell__image" src="https://source.unsplash.com/random/7" alt="Tablero magnético">
+        </div>
+        
     </co-depends-responsive-honeycomb>
+    <script type=importmap>
+        {
+            "imports": {
+                
+                "be-based/": "../../node_modules/be-based/",
+                "be-decorated/": "../../node_modules/be-decorated/",
+                "be-definitive/": "../../node_modules/be-definitive/",
+                "be-exportable/": "../../node_modules/be-exportable/",
+                "be-ferried/": "../../node_modules/be-ferried/",
+                "be-having/": "../../node_modules/be-having/",
+                "be-hive/": "../../node_modules/be-hive/",
+                "be-importing/": "../../node_modules/be-importing/",
+                "be-written/": "../../node_modules/be-written/",
+                "stream-orator/": "../../node_modules/stream-orator/",
+                "trans-render/": "../../node_modules/trans-render/",
+                "xtal-element/": "../../node_modules/xtal-element/",
+                "co-depends/": "../../"
+            }
+        }
+    </script>
+    <script type=module>
+        import 'be-importing/be-importing.js';
+    </script>
 </body>
-
 </html>
