--- a/responsive-honeycomb/demo/dev.html
+++ b/responsive-honeycomb/demo/dev.html
@@ -9,13 +9,13 @@
 <body>
     <co-depends-responsive-honeycomb be-importing=co-depends/responsive-honeycomb/root.html/>
         <div>
-            <img class="honeycomb-cell__image" src="https://source.unsplash.com/random/1" alt="Diseño exclusivo">
-            <img class="honeycomb-cell__image" src="https://source.unsplash.com/random/2" alt="Impermeables">
-            <img class="honeycomb-cell__image" src="https://source.unsplash.com/random/3" alt="Tablero doble cara">
-            <img class="honeycomb-cell__image" src="https://source.unsplash.com/random/4" alt="Maletín de empaque">
-            <img class="honeycomb-cell__image" src="https://source.unsplash.com/random/5" alt="Antireflectivo" data-small="No vidrio">
-            <img class="honeycomb-cell__image" src="https://source.unsplash.com/random/6" alt="6 fichas" data-small="1 de repuesto">
-            <img class="honeycomb-cell__image" src="https://source.unsplash.com/random/7" alt="Tablero magnético">
+            <img src="https://source.unsplash.com/random/1" alt="Diseño exclusivo">
+            <img src="https://source.unsplash.com/random/2" alt="Impermeables">
+            <img src="https://source.unsplash.com/random/3" alt="Tablero doble cara">
+            <img src="https://source.unsplash.com/random/4" alt="Maletín de empaque">
+            <img src="https://source.unsplash.com/random/5" alt="Antireflectivo" data-small="No vidrio">
+            <img src="https://source.unsplash.com/random/6" alt="6 fichas" data-small="1 de repuesto">
+            <img src="https://source.unsplash.com/random/7" alt="Tablero magnético">
         </div>
         
     </co-depends-responsive-honeycomb>
