--- a/parallax-flip-card/demo/dev.html
+++ b/parallax-flip-card/demo/dev.html
@@ -1,93 +1,110 @@
 <!DOCTYPE html>
 <html lang="en">
-
 <head>
     <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Document</title>
 </head>
-
 <body>
-    <div>
-        <div class="cols">
-            <co-depends-parallax-flip-card id="first">
-                <div slot="front">
-                    <p>Diligord</p>
-                    <span>Lorem ipsum</span>
-                </div>
-                <div slot="back">
-                    <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Alias cum repellat velit quae suscipit
-                        c.</p>
-                </div>
-            </co-depends-parallax-flip-card>
-            <co-depends-parallax-flip-card id="second">
-                <div slot="front">
-                    <p>Strizzes</p>
-                    <span>Lorem ipsum</span>
-                </div>
-                <div slot="back">
-                    <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Alias cum repellat velit quae suscipit
-                        c.</p>
-                </div>
-            </co-depends-parallax-flip-card>
-            <co-depends-parallax-flip-card id="third">
-                <div slot="front">
-                    <p>Rocogged</p>
-                    <span>Lorem ipsum</span>
-                </div>
-                <div slot="back">
-                    <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Alias cum repellat velit quae suscipit
-                        c.</p>
-                </div>
-            </co-depends-parallax-flip-card>
-            <co-depends-parallax-flip-card id="fourth">
-                <div slot="front">
-                    <p>Clossyo</p>
-                    <span>Lorem ipsum</span>
-                </div>
-                <div slot="back">
-                    <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Alias cum repellat velit quae suscipit
-                        c.</p>
-                </div>
-            </co-depends-parallax-flip-card>
-        </div>
-        <script type="module" src="../parallax-flip-card.js"></script>
-        <style>
-            #first {
-                --front-background-image: url(https://unsplash.it/500/500/);
-            }
+    <style>
+        #first {
+            --front-background-image: url(https://unsplash.it/500/500/);
+        }
 
-            #second {
-                --front-background-image: url(https://unsplash.it/511/511/);
-            }
+        #second {
+            --front-background-image: url(https://unsplash.it/511/511/);
+        }
 
-            #third {
-                --front-background-image: url(https://unsplash.it/502/502/);
-            }
+        #third {
+            --front-background-image: url(https://unsplash.it/502/502/);
+        }
 
-            #fourth {
-                --front-background-image: url(https://unsplash.it/503/503/);
-            }
+        #fourth {
+            --front-background-image: url(https://unsplash.it/503/503/);
+        }
 
-            .cols {
-                display: -webkit-box;
-                display: -ms-flexbox;
-                display: flex;
-                -ms-flex-wrap: wrap;
-                flex-wrap: wrap;
-                -webkit-box-pack: center;
-                -ms-flex-pack: center;
-                justify-content: center;
-            }
+        .cols {
+            display: -webkit-box;
+            display: -ms-flexbox;
+            display: flex;
+            -ms-flex-wrap: wrap;
+            flex-wrap: wrap;
+            -webkit-box-pack: center;
+            -ms-flex-pack: center;
+            justify-content: center;
+        }
 
-            co-depends-parallax-flip-card {
-                width: calc(25% - 2rem);
-                margin: 1rem;
-                cursor: pointer;
-            }
-        </style>
+        co-depends-parallax-flip-card {
+            width: calc(25% - 2rem);
+            margin: 1rem;
+            cursor: pointer;
+        }
+    </style>
+    <div class="cols">
+        <co-depends-parallax-flip-card be-importing='co-depends/parallax-flip-card/root.html' id="first">
+            <div slot="front">
+                <p>Diligord</p>
+                <span>Lorem ipsum</span>
+            </div>
+            <div slot="back">
+                <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Alias cum repellat velit quae suscipit
+                    c.</p>
+            </div>
+        </co-depends-parallax-flip-card>
+        <co-depends-parallax-flip-card id="second">
+            <div slot="front">
+                <p>Strizzes</p>
+                <span>Lorem ipsum</span>
+            </div>
+            <div slot="back">
+                <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Alias cum repellat velit quae suscipit
+                    c.</p>
+            </div>
+        </co-depends-parallax-flip-card>
+        <co-depends-parallax-flip-card id="third">
+            <div slot="front">
+                <p>Rocogged</p>
+                <span>Lorem ipsum</span>
+            </div>
+            <div slot="back">
+                <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Alias cum repellat velit quae suscipit
+                    c.</p>
+            </div>
+        </co-depends-parallax-flip-card>
+        <co-depends-parallax-flip-card id="fourth">
+            <div slot="front">
+                <p>Clossyo</p>
+                <span>Lorem ipsum</span>
+            </div>
+            <div slot="back">
+                <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Alias cum repellat velit quae suscipit
+                    c.</p>
+            </div>
+        </co-depends-parallax-flip-card>
     </div>
+    <script type=importmap>
+        {
+            "imports": {
+                
+                "be-based/": "../../node_modules/be-based/",
+                "be-decorated/": "../../node_modules/be-decorated/",
+                "be-definitive/": "../../node_modules/be-definitive/",
+                "be-exportable/": "../../node_modules/be-exportable/",
+                "be-ferried/": "../../node_modules/be-ferried/",
+                "be-having/": "../../node_modules/be-having/",
+                "be-hive/": "../../node_modules/be-hive/",
+                "be-importing/": "../../node_modules/be-importing/",
+                "be-written/": "../../node_modules/be-written/",
+                "stream-orator/": "../../node_modules/stream-orator/",
+                "trans-render/": "../../node_modules/trans-render/",
+                "xtal-element/": "../../node_modules/xtal-element/",
+                "co-depends/": "../../"
+            }
+        }
+    </script>
+    <script type=module>
+        import 'be-importing/be-importing.js';
+    </script>
 </body>
-
 </html>
