--- a/animated-star-rating/demo/dev.html
+++ b/animated-star-rating/demo/dev.html
@@ -15,6 +15,7 @@
             "imports": {
                 
                 "be-based/": "../../node_modules/be-based/",
+                "be-bound/": "../be-bound/",
                 "be-decorated/": "../../node_modules/be-decorated/",
                 "be-definitive/": "../../node_modules/be-definitive/",
                 "be-exportable/": "../../node_modules/be-exportable/",
@@ -27,7 +28,7 @@
                 "be-written/": "../../node_modules/be-written/",
                 "stream-orator/": "../../node_modules/stream-orator/",
                 "trans-render/": "../../node_modules/trans-render/",
-                "xtal-element/": "../../node_modules/xtal-element/",
+                "xtal-element/": "../xtal-element/",
                 "co-depends/": "../../"
             }
         }
