--- a/animated-star-rating/root.html
+++ b/animated-star-rating/root.html
@@ -432,6 +432,16 @@
                     <p class="rating__display" data-rating="5" hidden>Excellent</p>
                 </div>
             </form>
+            <be-hive></be-hive>
+            <script id=shared-co-depends-animated-star-rating nomodule be-having href=make.ts>
+                export const make=['co-depends/animated-star-rating/make.js', 'https://esm.run/co-depends@0.0.24/animated-star-rating/make.js'];
+                export const definitive = {
+                    impl: ['be-definitive/be-definitive.js', 'https://esm.run/be-definitive@0.0.89']
+                };
+                export const bound = {
+                    impl: ['be-bound/be-bound.js', 'https://esm.run/be-bound@0.0.5']
+                }
+            </script>
             <!--end--><!--end-->
         </div>
     </template>
