--- a/css-marquee-logo-wall/root.html
+++ b/css-marquee-logo-wall/root.html
@@ -365,7 +365,7 @@
             </svg>
         </div>
         <be-hive></be-hive>
-        <script id=shared-co-depends-css-marquee-logo-wall nomodule be-having>
+        <script id=shared-co-depends-css-marquee-logo-wall nomodule be-having href=make.ts>
             export const make=['co-depends/css-marquee-logo-wall/make.js', 'https://esm.run/co-depends@0.0.24/css-marquee-logo-wall/make.js'];
             export const definitive = {
                 impl: ['be-definitive/be-definitive.js', 'https://esm.run/be-definitive@0.0.89']
