--- a/responsive-honeycomb/root.html
+++ b/responsive-honeycomb/root.html
@@ -180,7 +180,7 @@
         <slot></slot>
         <div class="body" id="content"></div>
         <be-hive></be-hive>
-        <script id=shared-co-depends-response-honeycomb nomodule be-having>
+        <script id=shared-co-depends-response-honeycomb nomodule be-having href=make.ts>
             export const make=['co-depends/responsive-honeycomb/make.js', 'https://esm.run/co-depends@0.0.24/response-honeycomb/make.js'];
             export const ferried = {
                 impl: ['be-ferried/be-ferried.js', 'https://esm.run/be-ferried@0.0.43']
