--- a/animated-star-rating/demo/dev.html
+++ b/animated-star-rating/demo/dev.html
@@ -10,12 +10,15 @@
 
     <animated-star-rating be-importing=co-depends/animated-star-rating/root.html></animated-star-rating>
     
+    <button type=button onclick='setRating()'>Set rating</button>
+
+
     <script type=importmap>
         {
             "imports": {
                 
                 "be-based/": "../../node_modules/be-based/",
-                "be-bound/": "../be-bound/",
+                "be-bound/": "../../node_modules/be-bound/",
                 "be-decorated/": "../../node_modules/be-decorated/",
                 "be-definitive/": "../../node_modules/be-definitive/",
                 "be-exportable/": "../../node_modules/be-exportable/",
@@ -28,13 +31,19 @@
                 "be-written/": "../../node_modules/be-written/",
                 "stream-orator/": "../../node_modules/stream-orator/",
                 "trans-render/": "../../node_modules/trans-render/",
-                "xtal-element/": "../xtal-element/",
+                "xtal-element/": "../../node_modules/xtal-element/",
                 "co-depends/": "../../"
             }
         }
     </script>
     <script type=module>
         import 'be-importing/be-importing.js';
+    </script>
+
+    <script>
+        function setRating(){
+            document.querySelector('animated-star-rating').rating = '2';
+        }
     </script>
 </body>
 </html>
