--- a/animated-star-rating/demo/dev.html
+++ b/animated-star-rating/demo/dev.html
@@ -42,7 +42,7 @@
 
     <script>
         function setRating(){
-            document.querySelector('animated-star-rating').rating = '2';
+            document.querySelector('animated-star-rating').value = '2';
         }
     </script>
 </body>
