--- a/css-marquee-logo-wall/root.html
+++ b/css-marquee-logo-wall/root.html
@@ -195,20 +195,20 @@
                 }
             }
         </style>
-        <div class=body>
+        <div class=body part=body>
 
 
-            <button class="toggle" id="direction-toggle">
-                <span>Toggle scroll axis</span>
-                <svg aria-hidden="true" viewBox="0 0 512 512" width="100" title="arrows-alt-h">
+            <button class="toggle" part=toggle id="direction-toggle">
+                <span part=toggle-label>Toggle scroll axis</span>
+                <svg part=toggle-img aria-hidden="true" viewBox="0 0 512 512" width="100" title="arrows-alt-h">
                     <path
                         d="M377.941 169.941V216H134.059v-46.059c0-21.382-25.851-32.09-40.971-16.971L7.029 239.029c-9.373 9.373-9.373 24.568 0 33.941l86.059 86.059c15.119 15.119 40.971 4.411 40.971-16.971V296h243.882v46.059c0 21.382 25.851 32.09 40.971 16.971l86.059-86.059c9.373-9.373 9.373-24.568 0-33.941l-86.059-86.059c-15.119-15.12-40.971-4.412-40.971 16.97z" />
                 </svg>
             </button>
 
-            <article class="wrapper">
-                <div class="marquee">
-                    <div class="marquee__group">
+            <article part=wrapper class="wrapper">
+                <div part=marquee class="marquee">
+                    <div part=marquee-group class="marquee__group">
                         <svg>
                             <use xlink:href="#mcdonalds" />
                         </svg>
@@ -235,7 +235,7 @@
                         </svg>
                     </div>
 
-                    <div aria-hidden="true" class="marquee__group">
+                    <div part=marquee-group aria-hidden="true" class="marquee__group">
                         <svg>
                             <use xlink:href="#mcdonalds" />
                         </svg>
@@ -263,7 +263,7 @@
                     </div>
                 </div>
 
-                <div class="marquee marquee--reverse">
+                <div part="marquee marquee-reverse" class="marquee marquee--reverse">
                     <div class="marquee__group">
                         <svg>
                             <use xlink:href="#hulu" />
@@ -291,7 +291,7 @@
                         </svg>
                     </div>
 
-                    <div aria-hidden="true" class="marquee__group">
+                    <div part=marquee-group aria-hidden="true" class="marquee__group">
                         <svg>
                             <use xlink:href="#hulu" />
                         </svg>
