--- a/sidebar-interaction/root.html
+++ b/sidebar-interaction/root.html
@@ -375,7 +375,7 @@
                     }
                 }
             </style>
-            <div className={`sidebar-container${isShrinkView ? " shrink" : "" }`}>
+            <div part=sidebar-container class=sidebar-container classNamex={`sidebar-container${isShrinkView ? " shrink" : "" }`}>
                 <!-- <button className="sidebar-viewButton" type="button" aria-label={isShrinkView ? "Expand Sidebar"
                     : "Shrink Sidebar" } title={isShrinkView ? "Expand" : "Shrink" } onClick={handleSidebarView}>
                     <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none"
